@@ -22,21 +22,19 @@ import org.gradle.integtests.fixtures.executer.GradleExecuter
 import org.gradle.integtests.fixtures.executer.IntegrationTestBuildContext
 import org.gradle.performance.measure.MeasuredOperation
 import org.gradle.test.fixtures.file.TestDirectoryProvider
+import org.gradle.test.fixtures.file.TestFile
 
 @CompileStatic
 class GradleExecuterBackedSession implements GradleSession {
 
     final GradleInvocationSpec invocation
 
-    private final TestDirectoryProvider testDirectoryProvider
-
     private final IntegrationTestBuildContext integrationTestBuildContext
 
     private GradleExecuter executer
     private GradleExecuter executerForStopping
 
-    GradleExecuterBackedSession(GradleInvocationSpec invocation, TestDirectoryProvider testDirectoryProvider, IntegrationTestBuildContext integrationTestBuildContext) {
-        this.testDirectoryProvider = testDirectoryProvider
+    GradleExecuterBackedSession(GradleInvocationSpec invocation, IntegrationTestBuildContext integrationTestBuildContext) {
         this.invocation = invocation
         this.integrationTestBuildContext = integrationTestBuildContext
     }
@@ -83,7 +81,19 @@ class GradleExecuterBackedSession implements GradleSession {
         def invocation = invocationCustomizer ? invocationCustomizer.customize(invocationInfo, this.invocation) : this.invocation
 
         def createNewExecuter = {
-            invocation.gradleDistribution.executer(testDirectoryProvider, integrationTestBuildContext)
+            def distribution = new PerformanceTestGradleDistribution(invocation.gradleDistribution, invocationInfo.projectDir)
+            def testDirectoryProvider = new TestDirectoryProvider() {
+                @Override
+                TestFile getTestDirectory() {
+                    new TestFile(invocationInfo.projectDir)
+                }
+
+                @Override
+                void suppressCleanup() {
+
+                }
+            }
+            distribution.executer(testDirectoryProvider, integrationTestBuildContext)
         }
         if (executer == null) {
             executer = createNewExecuter()
@@ -93,15 +103,11 @@ class GradleExecuterBackedSession implements GradleSession {
 
         executer.
             requireOwnGradleUserHomeDir().
-            withReuseUserHomeServices(true).
             requireGradleDistribution().
             requireIsolatedDaemons().
             withFullDeprecationStackTraceDisabled().
             withStackTraceChecksDisabled().
-            withArgument('-u').
-            inDirectory(invocation.workingDirectory).
-            withTasks(invocation.tasksToRun).
-            withOutputCapturing(false)
+            withTasks(invocation.tasksToRun)
 
         executer.withBuildJvmOpts(invocation.jvmOpts)
 
@@ -109,14 +115,6 @@ class GradleExecuterBackedSession implements GradleSession {
 
         if (invocation.useDaemon) {
             executer.requireDaemon()
-        }
-
-        if (executer.isUseDaemon()) {
-            executer.withCommandLineGradleOpts(PerformanceTestJvmOptions.createDaemonClientJvmOptions())
-        } else {
-            // optimize for fast startup time when there is no daemon
-            // also enable Class Data Sharing (cds) when it's a non-daemon JVM
-            executer.withBuildJvmOpts(['-Xverify:none', '-Xshare:auto'])
         }
 
         // must make a copy of argument for executer to use for stopping since arguments must match when stopping the daemons
